                        Removed the airfield sort but kept the 'not print unused aflds'
                        facility. Sort by date just made it hard to read anyway.

 22/12/18 vbc - 2.02.01 Experiment for using airfield names in place of ICAO codes
                        PR11, PH11 ?     from TODO (2).
                        BUG - Using HIDDEN menu options 3 & 4 for C & D respectively.
                        Carried totals not happening chg test for > 1 instd of > 0
                        also BF totals need extra blank line after.
                        BUG - Loading airfields from file don't set last-flt so anal will
                        valid data if a flight was amended changing the Afld
                        BUG - In ZP000 on read invalid just goto reread table as any missing
                        result of a delete in option K.
                        Feature - Aircraft report for options C, D, 3 & 4. did not for C / 3.

 28/12/18 vbc - 2.02.02 Increased character set for converting between EBCDIC and ASCII
                        more special characters. Need to access MVS to test it.

 29/12/18 vbc       .03 CSV - Missed comma period in EBCDIC and ASCII tables.
                        EBCDIC tested using PDS VB .
                    .04 Problem with end of line that is not there so data
                        is one big block. This will not work less plan 2 can be
                        created and no, no idea at the moment.
                        AS this issue cannot be resolved when using a normal data
                        processing for ASCII data records as Line Sequential this
                        function is being removed (Data conversion EBCDIC to ACSII).
                        Method of storing original data on m/f can vary and process
                        to get around this problem will also vary so function removed.
                        Remove this from manual.